@@ -1,3 +1,7 @@
+2010-10-31 MA Yue <velly.empire@gmail.com>
+
+    * Correct Bioclipse installation
+
 2010-10-29 Homer Xing <homer.xing@gmail.com>
 
 	* Dynamic loading setting function. Faster now 
